[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Objects/Drills/Regular/Regular_drill.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Objects/Drills/Regular/drill.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/Drills/broken.mp3" type="AudioStream" id=4]
[ext_resource path="res://src/Objects/Drills/drill.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 136 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Regular_drill_up" type="Node2D" groups=["drill"]]
z_index = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["detectable", "drill", "interactable"]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Drill_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Repair_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Drill_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -200.0
margin_right = 112.0
margin_bottom = -79.0

[node name="VBoxContainer" type="VBoxContainer" parent="Drill_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 114.0

[node name="Title" type="Label" parent="Drill_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Drill"
align = 1

[node name="Action" type="Label" parent="Drill_panel/VBoxContainer"]
margin_top = 72.0
margin_right = 210.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Drilling... (60s)"
align = 1

[node name="Interaction_panel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -216.0
margin_right = 112.0
margin_bottom = -96.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 113.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Drill"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "Hold [F] to Repair"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
step = 1.0
rounded = true

[node name="drill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="broke" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="timeout" from="Drill_timer" to="." method="_on_Drill_timer_timeout"]
[connection signal="timeout" from="Repair_timer" to="." method="_on_Repair_timer_timeout"]
